--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -8,21 +8,34 @@
     <artifactId>tomcat</artifactId>
     <version>6.0.5</version>
     <packaging>jar</packaging>
-    <classifier>
 
     <properties>
+    
+    
     </properties>
 
     <build>
+    
+		<plugins>
+			<plugin>
+				<!-- <groupId>org.apache.maven.plugins</groupId> -->
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+						  <mainClass>org.apache.catalina.startup.Bootstrap</mainClass>
+						</manifest>
+					 </archive>
+				</configuration>
+			</plugin>
+		</plugins>
     </build>
 
     <dependencies>
-    
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-assembly-plugin</artifactId>
-			<version>3.1.0</version>
-		</dependency>
 		
 		 <dependency>
             <groupId>junit</groupId>
@@ -32,15 +45,42 @@
             <scope>test</scope>
             <optional>false</optional>
         </dependency>
-
+        
         <dependency>
-            <groupId>javax.xml.rpc</groupId>
-            <artifactId>javax.xml.rpc-api</artifactId>
-            <version>1.1.1</version>
-            <type>jar</type>
-            <scope>test</scope>
-            <optional>false</optional>
+			<groupId>javax.xml.rpc</groupId>
+			<artifactId>javax.xml.rpc-api</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.lucee</groupId>
+			<artifactId>wsdl4j</artifactId>
+			<version>1.5.1</version>
+		</dependency>
+        
+        <dependency>
+            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <artifactId>ecj</artifactId>
+            <version>3.7.1</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-nodeps</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.eclipse.jetty.orbit</groupId>
+            <artifactId>org.apache.jasper.glassfish</artifactId>
+            <version>2.2.2.v201112011158</version>
+        </dependency>
+        
+        <dependency>
+			<groupId>tomcat</groupId>
+			<artifactId>naming-factory</artifactId>
+			<version>5.0.28</version>
+		</dependency>
         
     </dependencies>
 
