--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -14,20 +14,11 @@
 
     <build>
 		<plugins>
-		<!--<plugin>-->
-		  <!--<groupId>org.codehaus.mojo</groupId>-->
-		  <!--<artifactId>emma-maven-plugin</artifactId>-->
-		  <!--<version>1.0-alpha-3</version>-->
-		  <!--<inherited>true</inherited>-->
-		  <!--<executions>-->
-		    <!--<execution>-->
-		    <!--<phase>process-classes</phase>-->
-		    <!--<goals>-->
-		      <!--<goal>instrument</goal>-->
-		    <!--</goals>-->
-		    <!--</execution>-->
-		  <!--</executions>-->
-		 <!--</plugin>-->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>emma-maven-plugin</artifactId>
+				<version>1.0-alpha-3</version>
+			</plugin>
 		<plugin>
 		                    <groupId>org.apache.maven.plugins</groupId>
 		                    <artifactId>maven-pmd-plugin</artifactId>
@@ -59,7 +50,13 @@
 		</plugins>
     </build>
 
-    <dependencies>	
+    <dependencies>
+
+		<dependency>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>emma-maven-plugin</artifactId>
+				<version>1.0-alpha-3</version>
+		</dependency>
    	
 		 <dependency>
             <groupId>junit</groupId>
