--- a/.gitignore
+++ b/.gitignore
@@ -5,22 +5,22 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-**/.idea/**/workspace.xml
-**/.idea/**/tasks.xml
-**/.idea/dictionaries
+tomcat/**/.idea/**/workspace.xml
+tomcat/**/.idea/**/tasks.xml
+tomcat/**/.idea/dictionaries
 
 # Sensitive or high-churn files:
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
+tomcat/.idea/**/dataSources/
+tomcat/.idea/**/dataSources.ids
+tomcat/.idea/**/dataSources.xml
+tomcat/.idea/**/dataSources.local.xml
+tomcat/.idea/**/sqlDataSources.xml
+tomcat/.idea/**/dynamic.xml
+tomcat/.idea/**/uiDesigner.xml
 
 # Gradle:
-.idea/**/gradle.xml
-.idea/**/libraries
+tomcat/.idea/**/gradle.xml
+tomcat/.idea/**/libraries
 
 # CMake
 cmake-build-debug/
@@ -37,13 +37,13 @@ cmake-build-debug/
 /out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
+tomcat/.idea_modules/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
 
 # Cursive Clojure plugin
-.idea/replstate.xml
+tomcat/.idea/replstate.xml
 
 # Ruby plugin and RubyMine
 /.rakeTasks
