--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -11,16 +11,6 @@
     
     <properties>
     </properties>
-
-	<reporting>
-	    <plugins>
-	      <plugin>
-	        <groupId>org.codehaus.mojo</groupId>
-	        <artifactId>findbugs-maven-plugin</artifactId>
-	        <version>3.0.6-SNAPSHOT</version>
-	      </plugin>
-	    </plugins>
-	</reporting>
 	
     <build>
 		<plugins>
@@ -29,15 +19,6 @@
 				<artifactId>emma-maven-plugin</artifactId>
 				<version>1.0-alpha-3</version>
 			</plugin>
-		<plugin>
-		        <groupId>org.codehaus.mojo</groupId>
-		        <artifactId>findbugs-maven-plugin</artifactId>
-		        <version>3.0.6-SNAPSHOT</version>
-				<configuration>
-					<xmlOutput>true</xmlOutput>
-					<xmlOutputDirectory>target/site</xmlOutputDirectory>
-				</configuration>
-			 </plugin>
 			<plugin>
 		                    <groupId>org.apache.maven.plugins</groupId>
 		                    <artifactId>maven-pmd-plugin</artifactId>
@@ -76,12 +57,6 @@
 				<artifactId>emma-maven-plugin</artifactId>
 				<version>1.0-alpha-3</version>
 		</dependency>
-
-   		 <dependency>
-   		     <groupId>org.codehaus.mojo</groupId>
-   		     <artifactId>findbugs-maven-plugin</artifactId>
-   		     <version>3.0.5</version>
-   		 </dependency>
 
 		 <dependency>
             <groupId>junit</groupId>
@@ -128,4 +103,18 @@
 			<version>5.0.28</version>
 		</dependency>     
     </dependencies>
+    
+    <reporting>
+			<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<configuration>
+					<threshold>Low</threshold>
+						<effort>Default</effort>
+						</configuration>
+		 	</plugin>
+			 </plugins>
+		</reporting>
+    
 </project>
