--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -111,8 +111,10 @@
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<configuration>
 					<threshold>Low</threshold>
-						<effort>Default</effort>
-						</configuration>
+					<effort>Default</effort>
+					<xmlOutput>true</xmlOutput>
+					<xmlOutputDirectory>target/site</xmlOutputDirectory>
+				</configuration>
 		 	</plugin>
 			 </plugins>
 		</reporting>
