--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -53,20 +53,23 @@
 
     <dependencies>
 		<dependency>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>emma-maven-plugin</artifactId>
-				<version>1.0-alpha-3</version>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>emma-maven-plugin</artifactId>
+			<version>1.0-alpha-3</version>
 		</dependency>
 
-		 <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <type>jar</type>
-            <scope>test</scope>
-            <optional>false</optional>
-        </dependency>
-        
+		<dependency>
+		    <groupId>xerces</groupId>
+		    <artifactId>xercesImpl</artifactId>
+		    <version>2.7.1</version>
+		</dependency>
+<!--
+		<dependency>
+		    <groupId>xml-apis</groupId>
+		    <artifactId>xml-apis</artifactId>
+		    <version>xerces-2.7.1</version>
+		</dependency>
+	-->	
         <dependency>
 			<groupId>javax.xml.rpc</groupId>
 			<artifactId>javax.xml.rpc-api</artifactId>
