--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -63,13 +63,14 @@
 		    <artifactId>xercesImpl</artifactId>
 		    <version>2.7.1</version>
 		</dependency>
-<!--
+
 		<dependency>
-		    <groupId>xml-apis</groupId>
-		    <artifactId>xml-apis</artifactId>
-		    <version>xerces-2.7.1</version>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
 		</dependency>
-	-->	
+
         <dependency>
 			<groupId>javax.xml.rpc</groupId>
 			<artifactId>javax.xml.rpc-api</artifactId>
