--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -23,6 +23,11 @@
 		                    <groupId>org.apache.maven.plugins</groupId>
 		                    <artifactId>maven-pmd-plugin</artifactId>
 		                    <version>3.8</version>
+		                    <configuration>
+								<rulesets>
+									<ruleset>src/main/resources/pmd-ruleset.xml</ruleset>
+								</rulesets>		
+		                    </configuration>
 		                </plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
